--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
     "gulp-util": "^2.2.14",
     "shelljs": "^0.3.0"
   },
-  "cordovaPlugins": []
+  "cordovaPlugins": [
+    "com.ionic.keyboard",
+    "org.apache.cordova.console",
+    "org.apache.cordova.device",
+    "https://github.com/Pushwoosh/pushwoosh-phonegap-3.0-plugin.git"
+  ]
 }
