--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,8 @@
   "name": "food-rescue",
   "private": "true",
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.0.0-beta.14"
+    "ionic": "driftyco/ionic-bower#1.0.0-beta.14",
+    "angular-google-maps": "~2.0.12",
+    "ngCordova": "~0.1.12-alpha"
   }
 }
