--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.0.0-beta.14",
     "angular-google-maps": "~2.0.12",
-    "ngCordova": "~0.1.12-alpha"
+    "ngCordova": "~0.1.12-alpha",
+    "angular-qrcode": "~5.1.0"
   }
 }
