--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "org.apache.cordova.device",
     "https://github.com/Pushwoosh/pushwoosh-phonegap-3.0-plugin.git",
     "org.apache.cordova.geolocation",
-    "https://github.com/wildabeast/BarcodeScanner.git"
+    "https://github.com/wildabeast/BarcodeScanner.git",
+    "org.apache.cordova.splashscreen@0.3.5"
   ]
 }
